# SFMLGameForExam

./: CMakeLists.txt  README.md  main.cpp
inc/img/: App.rc
inc/src/: classes.cpp  classes.hpp
src/: classes.cpp  classes.hpp
